chore: config 파일 정리

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "tsc --project ./config/tsconfig.json && vite build",
+    "lint": "eslint --config ./config/eslint.config.js src",
+    "prettier": "prettier --write --config ./config/.prettierrc.json 'src/**/*.{js,jsx,ts,tsx,css,md,json}'",
     "preview": "vite preview"
   },
   "dependencies": {
